# video-catalog-browser

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/api/cache/clear/: route.ts
app/api/proxy/: route.ts
app/api/proxy/generate/: route.ts
app/api/scan/: route.ts
app/api/selections/: route.ts
app/api/videos/: route.ts
app/api/videos/[id]/: route.ts
app/api/videos/[id]/sprite/: route.ts
app/api/videos/[id]/stream/: route.ts
app/api/videos/[id]/thumbnail/: route.ts
app/components/: DropZone.tsx  HoverScrubber.tsx  ProxyProgress.tsx  ScanProgress.tsx  SortControls.tsx  VideoCard.tsx  VideoGrid.tsx  VideoModal.tsx
app/lib/: db.ts  ffmpeg.ts  scanner.ts  types.ts  utils.ts
video-catalog-browser-rs/: Cargo.toml  README.md
video-catalog-browser-rs/src/: app.rs  main.rs  settings.rs
video-catalog-browser-rs/src/cache/: mod.rs  texture_cache.rs
video-catalog-browser-rs/src/db/: mod.rs  schema.rs  video_repo.rs
video-catalog-browser-rs/src/scanner/: directory.rs  fingerprint.rs  mod.rs
video-catalog-browser-rs/src/ui/: mod.rs
video-catalog-browser-rs/src/video/: decoder.rs  hover_decoder.rs  mod.rs  player.rs
